# Weekly-Recipe-Planner-Smart-Shopping-List

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  models.rs  store.rs
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: RecipeForm.jsx  RecipeList.jsx  ShoppingList.jsx  WeeklyPlanner.jsx
